--- a/player/src/main/res/layout/popup_player_layout.xml
+++ b/player/src/main/res/layout/popup_player_layout.xml
@@ -27,14 +27,6 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:visibility="visible"/>
-
-        <ImageView
-            android:id="@+id/replay_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:src="@drawable/replay"
-            android:visibility="invisible"/>
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
@@ -77,7 +69,8 @@
                 android:layout_height="28dp"
                 android:clickable="true"
                 android:focusable="true"
-                android:src="@drawable/close"/>
+                android:src="@drawable/close"
+                android:visibility="gone"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
