remove banner, add interstitial

--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -3,4 +3,5 @@
     <string name="app_name">YouPlay</string>
     <string name="app_id">ca-app-pub-8761730220693010~6724192231</string>
     <string name="banner_id">ca-app-pub-8761730220693010/2210232154</string>
+    <string name="int_id">ca-app-pub-8761730220693010/9580631307</string>
 </resources>
