--- a/player/src/main/res/layout/popup_player_layout.xml
+++ b/player/src/main/res/layout/popup_player_layout.xml
@@ -7,7 +7,7 @@
               android:background="#0fff"
               android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="150dp"
         app:cardCornerRadius="4dp"
@@ -26,9 +26,9 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:visibility="visible"/>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/slider_container"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -71,6 +71,6 @@
                 android:src="@drawable/close"
                 android:visibility="gone"/>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
