--- a/player/src/main/res/layout/popup_player_layout.xml
+++ b/player/src/main/res/layout/popup_player_layout.xml
@@ -14,11 +14,11 @@
         app:cardElevation="4dp"
         app:cardUseCompatPadding="true">
 
-        <com.palashbansal.musicalyoutube.YoutubePlayerView
+        <zhet.player.YoutubePlayerView
             android:id="@+id/player_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        </com.palashbansal.musicalyoutube.YoutubePlayerView>
+        </zhet.player.YoutubePlayerView>
 
         <ProgressBar
             android:id="@+id/buffer_loading_indicator"
